Fixing overflow issue

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -19,6 +19,10 @@ body {
   overflow-x: hidden;
 }
 
+#root {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
